# pillar-svnman

./: .gitignore  CHANGELOG.md  README.md  gulpfile.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  rsync_ui.sh  runserver.py  setup.cfg  setup.py  update_version.sh
src/scripts/tutti/: 00_utils.js
src/styles/: main.sass  svnman.sass
src/templates/svnman/: index.pug  layout.pug  sidebar.pug
src/templates/svnman/errors/: project_not_available.pug  project_not_setup.pug  service_not_available.pug
src/templates/svnman/project_settings/: offer_create_repo.pug  offer_setup.pug  settings.pug  svnman_layout.pug
svnman/: __init__.py  cli.py  exceptions.py  remote.py  routes.py
tests/: abstract_svnman_test.py  logging_config.py  test_api.py  test_pillar_extension.py
