[tool.poetry]
name = "svnman"
version = "1.1dev0"
description = "The Pillar SVNMan extension"
authors = [
    "Francesco Siddi <francesco@blender.org>",
    "Pablo Vazquez <pablo@blender.studio>",
    "Sybren Stüvel <sybren@blender.studio>",
]
include = ["readme.md", "LICENSE.txt"]

[tool.poetry.dependencies]
python = "~3.6"
pillar = {path = "../pillar"}

[tool.poetry.dev-dependencies]
pillar-devdeps = {path = "../pillar/devdeps"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
